--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="logoWrapper">
                 <span class="stylish">COUNTRY</span>
                 <span class="logo">APP</span>
-                <span class="home"><a class="link" href="#Weather">Home</a></span>
+                <span class="home"><a class="link" href="#weather">Home</a></span>
             </div>
             <ul class="navigation">
                 <input type="checkbox" id="checkbox_toggle" />
